# mlxops-xai

./: .gitignore  publish.sh  pyproject.toml
examples/: demo_auc.ipynb
src/mlxops_xai/: __init__.py  auc.py  gradient.py  progress.py  rcap.py
