[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlxops-xai"
version = "0.2.0"
description = "XAI (Explainable AI) methods including gradient-based saliency and RCAP"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "torch",
    "torchvision",
    "torchmetrics",
    "numpy",
    "tqdm",
    "mlxops-utils",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/youyinnn/mlxops-xai"

[tool.hatch.build.targets.wheel]
packages = ["src/mlxops_xai"]
